# discord-bot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  README.md  alembic.ini  ballot_reasons.sql  docker-compose.dev.yaml  docker-compose.staging.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-push.yml  tests.yml
migrations/: env.py
migrations/versions/: 08b9aae217e6_use_either_isbn.py  0e5086ea61ee_allow_for_fractional_voting.py  25a3266455c7_persist_summary.py  31f543f7cb41_cascade.py  460392e8201a_initial_schema.py  63567a7b40e6_remove_message_id_from_election.py  72b5854dbbb9_remove_book_prices_for_now.py  78781a5c30bd_alter_reactions.py  7b4b3bff9e0a_predictions_due_datetime.py  8e1130666f00_add_ballot_message_id.py  b4fd8c2ef7a1_drop_legacy_book_isbn.py  c6e5ca4cfaef_add_winner_field_to_elections.py  c9180e554a91_use_isbn10_only.py  e3f1a8d9b2c4_add_structured_book_metadata.py  f21802b4bbf0_decouple_from_amazon.py
src/bot/: api.py  background.py  calendar_sync.py  config.py  db.py  election.py  main.py  openai_summarize.py  reactions.py  recurring_discord_events.py  scraper.py  test_gate.py  utils.py
tests/: conftest.py  test_api_ballot.py  test_background.py  test_calendar_sync.py  test_commands_nominate.py  test_commands_predict.py  test_commands_vote.py  test_commands_voting_session.py  test_election.py  test_main_module.py  test_nominate.py  test_reactions.py  test_recurring_discord_events.py  test_test_gate.py  test_utils_module.py  test_vote_weight.py  utils.py
tests/e2e/: conftest.py  (+1 more)
(+5 files in other folders)
